<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_movil"
    tools:context=".NuevaAlarma">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:minHeight="?attr/actionBarSize">

                <LinearLayout
                    android:id="@+id/custom_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/custom_toolbar_relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/back"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:src="@drawable/baseline_arrow_back_24"
                            app:tint="@color/white" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/back"
                            android:orientation="vertical"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/logo"
                                android:layout_width="130dp"
                                android:layout_height="45dp"
                                android:gravity="start"
                                android:scaleType="fitXY"
                                android:src="@drawable/logo_alarmax" />
                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:background="@color/black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/screentitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/configuraciones_title"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="@color/azul" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_layout"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:text="@string/formato_de_hora"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:background="@android:drawable/btn_dropdown"
                        android:backgroundTint="@color/gris2"
                        android:entries="@array/formatoHora"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:text="@string/formato_de_fecha"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:background="@android:drawable/btn_dropdown"
                        android:backgroundTint="@color/gris2"
                        android:entries="@array/formatoFecha"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:text="@string/volumen_maestro"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.slider.Slider
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:thumbColor="@color/azul"
                        app:trackColor="@color/gris4"
                        app:trackColorActive="@color/azul" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line3"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ahorro_de_energia"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line4"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_molestar"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line5"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notificacion_de_respaldo"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line6"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibracion"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:background="@android:drawable/btn_dropdown"
                        android:backgroundTint="@color/gris2"
                        android:entries="@array/intensidad"
                        android:spinnerMode="dropdown"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line7"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/aqua"
                    android:text="@string/restaurar_backup"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/morado"
                    android:text="@string/cofigurar_pantalla"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/btn_cerrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/rosa"
                    android:text="@string/cerrar_sesion"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>