<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_movil"
    tools:context=".mainMenu">

    <RelativeLayout
        android:id="@+id/main_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize">

            <LinearLayout
                android:id="@+id/custom_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/custom_toolbar_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="130dp"
                            android:layout_height="45dp"
                            android:gravity="start"
                            android:scaleType="fitXY"
                            android:src="@drawable/logo_alarmax" />
                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/hamburger_button"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="30dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/baseline_menu_24"
                        app:tint="@color/white" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screentitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:text="@string/alarmastitle"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/morado" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_below="@+id/title_layout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title1"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/morado" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time1"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/days"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/gris3" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_below="@+id/card1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/morado" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time2"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/days"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/gris3" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_below="@+id/card2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title3"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/morado" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time3"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/days"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/gris3" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gris1"
            app:itemIconTint="@color/gris4"
            app:itemTextColor="@color/gris4"
            app:menu="@menu/menu_home" />

    </RelativeLayout>
</FrameLayout>